--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.test.rxjava.MainActivity">
+    tools:context="com.test.rxjava.amodule.main.activity.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
